--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <h1>Bem-Vindo ao Ind3D</h1>
       <section>
-        <img src="img/laranja.png" alt="Laranja" width="100px" height="100px" />
+        <img src="laranja.png" alt="Laranja" width="100px" height="100px" />
         <h2>Laranja Printer</h2>
         <a href="http://ind3d.tecnicon.com.br" target="_blank">Visitar</a>
       </section>
