--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
     <header></header>
     <main>
       <h1>Bem-Vindo ao Ind3D</h1>
-      <section>
+      <section class="card-impressora">
         <img src="laranja.png" alt="Laranja" width="100px" height="100px" />
         <h2>Laranja Printer</h2>
-        <a href="http://ind3d.tecnicon.com.br" target="_blank">Visitar</a>
+        <a href="http://ind3d.tecnicon.com.br" target="_blank">Acessar</a>
+      </section>
+      <section class="card-impressora">
+        <img src="azul.png" alt="Laranja" width="100px" height="100px" />
+        <h2>Azul Printer</h2>
+        <a href="http://ind3d.tecnicon.com.br" target="_blank">Acessar</a>
       </section>
     </main>
     <footer>
