--- a/index.html
+++ b/index.html
@@ -7,19 +7,22 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <main>
+    <header>
       <h1>Bem-Vindo ao Ind3D</h1>
-      <section class="card-impressora">
-        <img src="laranja.png" alt="Laranja" width="100px" height="100px" />
-        <h2>Laranja Printer</h2>
-        <a href="http://ind3d.tecnicon.com.br" target="_blank">Acessar</a>
-      </section>
-      <section class="card-impressora">
-        <img src="azul.png" alt="Laranja" width="100px" height="100px" />
-        <h2>Azul Printer</h2>
-        <a href="http://ind3d.tecnicon.com.br" target="_blank">Acessar</a>
-      </section>
+    </header>
+    <main>
+      <div class="card-container">
+        <div class="card-impressora">
+          <img src="laranja.png" alt="Laranja" width="100px" height="100px" />
+          <h2>Laranja</h2>
+          <a href="http://ind3d.tecnicon.com.br" target="_blank">Acessar</a>
+        </div>
+        <div class="card-impressora">
+          <img src="azul.png" alt="Laranja" width="100px" height="100px" />
+          <h2>Azul</h2>
+          <a href="http://ind3d.tecnicon.com.br" target="_blank">Acessar</a>
+        </div>
+      </div>
     </main>
     <footer>
       <p>Desenvolvido por Tecnicon</p>
