--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <div class="card-impressora">
           <img src="azul.png" alt="Laranja" width="100px" height="100px" />
           <h2>Azul</h2>
-          <a href="http://ind3d.tecnicon.com.br" target="_blank">Acessar</a>
+          <a href="404.html" target="_blank">Acessar</a>
+        </div>
+        <div class="card-impressora">
+          <img src="sethi.png" alt="Laranja" width="100px" height="100px" />
+          <h2>Sethi</h2>
+          <a href="404.html" target="_blank">Acessar</a>
         </div>
       </div>
     </main>
