--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       </div>
     </main>
     <footer>
-      <p>Desenvolvido por Tecnicon</p>
+      <div class="footer-container">
+        <p>&copy; 2024 Ind3D. Todos os direitos reservados.</p>
+      </div>
     </footer>
   </body>
 </html>
