--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Ind3D" />
+    <meta
+      property="og:description"
+      content="Empresa de impressão 3D tornando a manufatura aditiva acessível."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Ind3D" />
+    <meta
+      property="og:image"
+      content="https://scontent.cdninstagram.com/v/t51.2885-19/324229576_215592417492608_1323123967581355177_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_cat=108&_nc_ohc=6YXUU9RLi7MQ7kNvgH0W19C&edm=APs17CUBAAAA&ccb=7-5&oh=00_AYDSkzuP20vT-u6GDSJCrGh6QkscVaeN6Xode_4nJrVwTQ&oe=6646FF28&_nc_sid=10d13b"
+    />
     <title>Bem-Vindo | Ind3D</title>
     <link rel="stylesheet" href="style.css" />
   </head>
