--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     />
     <title>Bem-Vindo | Ind3D</title>
     <link rel="stylesheet" href="style.css" />
+
+    <link rel="icon" type="image/webp" href="logo-ind3d.jpg" />
   </head>
   <body>
     <header>
@@ -26,17 +28,30 @@
         <div class="card-impressora">
           <img src="laranja.png" alt="Laranja" width="100px" height="100px" />
           <h2>Laranja</h2>
-          <a href="http://ind3d.tecnicon.com.br" target="_blank">Acessar</a>
+          <a
+            class="acessar-btn"
+            href="http://ind3d.tecnicon.com.br"
+            target="_blank"
+            >Acessar</a
+          >
+          <a
+            class="assistir-btn"
+            href="https://ind3d.tecnicon.com.br/webcam/?action=stream"
+            target="_blank"
+            >Assistir</a
+          >
         </div>
         <div class="card-impressora">
           <img src="azul.png" alt="Laranja" width="100px" height="100px" />
           <h2>Azul</h2>
-          <a href="404.html" target="_blank">Acessar</a>
+          <a class="acessar-btn" href="404.html" target="_blank">Acessar</a>
+          <a class="assistir-btn" href="404.html" target="_blank">Assistir</a>
         </div>
         <div class="card-impressora">
           <img src="sethi.png" alt="Laranja" width="100px" height="100px" />
           <h2>Sethi</h2>
-          <a href="404.html" target="_blank">Acessar</a>
+          <a class="acessar-btn" href="404.html" target="_blank">Acessar</a>
+          <a class="assistir-btn" href="404.html" target="_blank">Assistir</a>
         </div>
       </div>
     </main>
