--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     />
     <title>Bem-Vindo | Ind3D</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <link rel="icon" type="image/webp" href="logo-ind3d.jpg" />
   </head>
@@ -32,26 +39,34 @@
             class="acessar-btn"
             href="http://ind3d.tecnicon.com.br"
             target="_blank"
-            >Acessar</a
+            ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
           >
           <a
             class="assistir-btn"
             href="https://ind3d.tecnicon.com.br/webcam/?action=stream"
             target="_blank"
-            >Assistir</a
+            ><i class="fa-solid fa-eye"></i>Assistir</a
           >
         </div>
         <div class="card-impressora">
           <img src="azul.png" alt="Laranja" width="100px" height="100px" />
           <h2>Azul</h2>
-          <a class="acessar-btn" href="404.html" target="_blank">Acessar</a>
-          <a class="assistir-btn" href="404.html" target="_blank">Assistir</a>
+          <a class="acessar-btn" href="404.html" target="_blank"
+            ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
+          >
+          <a class="assistir-btn" href="404.html" target="_blank"
+            ><i class="fa-solid fa-eye"></i>Assistir</a
+          >
         </div>
         <div class="card-impressora">
           <img src="sethi.png" alt="Laranja" width="100px" height="100px" />
           <h2>Sethi</h2>
-          <a class="acessar-btn" href="404.html" target="_blank">Acessar</a>
-          <a class="assistir-btn" href="404.html" target="_blank">Assistir</a>
+          <a class="acessar-btn" href="404.html" target="_blank"
+            ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
+          >
+          <a class="assistir-btn" href="404.html" target="_blank"
+            ><i class="fa-solid fa-eye"></i>Assistir</a
+          >
         </div>
       </div>
     </main>
