--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
             ><i class="fa-solid fa-eye"></i>Assistir</a
           >
         </div>
+        <div class="card-impressora">
+          <img src="ender3s1.jpg" alt="Ender3S1" width="100px" height="100px" />
+          <h2>Ender 3 S1</h2>
+          <a class="acessar-btn" href="404.html" target="_blank"
+            ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
+          >
+          <a class="assistir-btn" href="404.html" target="_blank"
+            ><i class="fa-solid fa-eye"></i>Assistir</a
+          >
+        </div>
       </div>
     </main>
     <footer>
