--- a/index.html
+++ b/index.html
@@ -51,10 +51,16 @@
         <div class="card-impressora">
           <img src="azul.png" alt="Laranja" width="100px" height="100px" />
           <h2>Azul</h2>
-          <a class="acessar-btn" href="404.html" target="_blank"
+          <a
+            class="acessar-btn"
+            href="https://ind3d2.tecnicon.com.br"
+            target="_blank"
             ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
           >
-          <a class="assistir-btn" href="404.html" target="_blank"
+          <a
+            class="assistir-btn"
+            href="https://ind3d2.tecnicon.com.br/webcam/?action=stream"
+            target="_blank"
             ><i class="fa-solid fa-eye"></i>Assistir</a
           >
         </div>
