--- a/index.html
+++ b/index.html
@@ -84,6 +84,21 @@
             ><i class="fa-solid fa-eye"></i>Assistir</a
           >
         </div>
+        <div class="card-impressora">
+          <img
+            src="ender3v3se.png"
+            alt="Ender3V3SE"
+            width="100px"
+            height="100px"
+          />
+          <h2>Ender 3 V3</h2>
+          <a class="acessar-btn" href="404.html" target="_blank"
+            ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
+          >
+          <a class="assistir-btn" href="404.html" target="_blank"
+            ><i class="fa-solid fa-eye"></i>Assistir</a
+          >
+        </div>
       </div>
     </main>
     <footer>
