--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
             ><i class="fa-solid fa-eye"></i>Assistir</a
           >
         </div>
+        <div class="card-impressora">
+          <img src="k1max.png" alt="K1MAX" width="100px" height="100px" />
+          <h2>K1 MAX</h2>
+          <a class="acessar-btn" href="404.html" target="_blank"
+            ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
+          >
+          <a class="assistir-btn" href="404.html" target="_blank"
+            ><i class="fa-solid fa-eye"></i>Assistir</a
+          >
+        </div>
       </div>
     </main>
     <footer>
