--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <a class="acessar-btn" href="404.html" target="_blank"
             ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
           >
-          <a class="assistir-btn" href="404.html" target="_blank"
+          <a class="assistir-btn" href="192.168.3.34:8080/?action=stream" target="_blank"
             ><i class="fa-solid fa-eye"></i>Assistir</a
           >
         </div>
