--- a/index.html
+++ b/index.html
@@ -65,16 +65,6 @@
           >
         </div>
         <div class="card-impressora">
-          <img src="sethi.png" alt="Laranja" width="100px" height="100px" />
-          <h2>Sethi</h2>
-          <a class="acessar-btn" href="404.html" target="_blank"
-            ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
-          >
-          <a class="assistir-btn" href="404.html" target="_blank"
-            ><i class="fa-solid fa-eye"></i>Assistir</a
-          >
-        </div>
-        <div class="card-impressora">
           <img src="ender3s1.jpg" alt="Ender3S1" width="100px" height="100px" />
           <h2>Ender 3 S1</h2>
           <a class="acessar-btn" href="404.html" target="_blank"
@@ -92,10 +82,10 @@
             height="100px"
           />
           <h2>Ender 3 V3</h2>
-          <a class="acessar-btn" href="404.html" target="_blank"
+          <a class="acessar-btn" href="v3.thalesgmartins.com.br" target="_blank"
             ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
           >
-          <a class="assistir-btn" href="404.html" target="_blank"
+          <a class="assistir-btn" href="https://v3.thalesgmartins.com.br/webcam/?action=snapshot&bypassCache=1738016468250" target="_blank"
             ><i class="fa-solid fa-eye"></i>Assistir</a
           >
         </div>
