--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
           <h2>Laranja</h2>
           <a
             class="acessar-btn"
-            href="http://ind3d.tecnicon.com.br"
+            href="https://laranja.thalesgmartins.com.br/443"
             target="_blank"
             ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
           >
           <a
             class="assistir-btn"
-            href="https://ind3d.tecnicon.com.br/webcam/?action=stream"
+            href="https://laranja.thalesgmartins.com.br:443/webcam/stream"
             target="_blank"
             ><i class="fa-solid fa-eye"></i>Assistir</a
           >
@@ -82,10 +82,10 @@
             height="100px"
           />
           <h2>Ender 3 V3</h2>
-          <a class="acessar-btn" href="v3.thalesgmartins.com.br" target="_blank"
+          <a class="acessar-btn" href="https://printers.thalesgmartins.com.br/443" target="_blank"
             ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
           >
-          <a class="assistir-btn" href="https://v3.thalesgmartins.com.br/webcam/?action=snapshot&bypassCache=1738016468250" target="_blank"
+          <a class="assistir-btn" href="https://v3.thalesgmartins.com.br/webcam/?action=snapshot" target="_blank"
             ><i class="fa-solid fa-eye"></i>Assistir</a
           >
         </div>
