--- a/index.html
+++ b/index.html
@@ -1,110 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Ind3D" />
-    <meta
-      property="og:description"
-      content="Empresa de impressão 3D tornando a manufatura aditiva acessível."
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Ind3D" />
-    <meta
-      property="og:image"
-      content="https://i.ibb.co/SQWSLVD/logo-ind3d.jpg"
-    />
-    <title>Bem-Vindo | Ind3D</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+<html lang="pt-br">
 
-    <link rel="icon" type="image/webp" href="logo-ind3d.jpg" />
-  </head>
-  <body>
-    <header>
-      <h1>Bem-Vindo ao Ind3D</h1>
-    </header>
-    <main>
-      <div class="card-container">
-        <div class="card-impressora">
-          <img src="laranja.png" alt="Laranja" width="100px" height="100px" />
-          <h2>Laranja</h2>
-          <a
-            class="acessar-btn"
-            href="https://laranja.thalesgmartins.com.br/443"
-            target="_blank"
-            ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
-          >
-          <a
-            class="assistir-btn"
-            href="https://laranja.thalesgmartins.com.br:443/webcam/stream"
-            target="_blank"
-            ><i class="fa-solid fa-eye"></i>Assistir</a
-          >
-        </div>
-        <div class="card-impressora">
-          <img src="azul.png" alt="Laranja" width="100px" height="100px" />
-          <h2>Azul</h2>
-          <a
-            class="acessar-btn"
-            href="https://ind3d2.tecnicon.com.br"
-            target="_blank"
-            ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
-          >
-          <a
-            class="assistir-btn"
-            href="https://ind3d2.tecnicon.com.br/webcam/?action=stream"
-            target="_blank"
-            ><i class="fa-solid fa-eye"></i>Assistir</a
-          >
-        </div>
-        <div class="card-impressora">
-          <img src="ender3s1.jpg" alt="Ender3S1" width="100px" height="100px" />
-          <h2>Ender 3 S1</h2>
-          <a class="acessar-btn" href="404.html" target="_blank"
-            ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
-          >
-          <a class="assistir-btn" href="404.html" target="_blank"
-            ><i class="fa-solid fa-eye"></i>Assistir</a
-          >
-        </div>
-        <div class="card-impressora">
-          <img
-            src="ender3v3se.png"
-            alt="Ender3V3SE"
-            width="100px"
-            height="100px"
-          />
-          <h2>Ender 3 V3</h2>
-          <a class="acessar-btn" href="https://printers.thalesgmartins.com.br/443" target="_blank"
-            ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
-          >
-          <a class="assistir-btn" href="https://v3.thalesgmartins.com.br/webcam/?action=snapshot" target="_blank"
-            ><i class="fa-solid fa-eye"></i>Assistir</a
-          >
-        </div>
-        <div class="card-impressora">
-          <img src="k1max.png" alt="K1MAX" width="100px" height="100px" />
-          <h2>K1 MAX</h2>
-          <a class="acessar-btn" href="404.html" target="_blank"
-            ><i class="fa-solid fa-right-to-bracket"></i>Acessar</a
-          >
-          <a class="assistir-btn" href="192.168.3.34:8080/?action=stream" target="_blank"
-            ><i class="fa-solid fa-eye"></i>Assistir</a
-          >
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="Ind3D" />
+  <meta property="og:description" content="Empresa de impressão 3D tornando a manufatura aditiva acessível." />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Ind3D" />
+  <meta property="og:image" content="https://i.ibb.co/SQWSLVD/logo-ind3d.jpg" />
+  <title>Bem-Vindo | Ind3D</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link rel="icon" type="image/webp" href="logo-ind3d.jpg" />
+</head>
+
+<body>
+  <header>
+    <h1>Bem-Vindo ao Ind3D</h1>
+  </header>
+  <main>
+    <div class="card-container">
+      <div class="card-impressora ender3v3se">
+        <img src="ender3v3se.png" alt="Ender3V3SE" width="100px" height="100px" />
+        <h2>Ender 3 V3</h2>
+        <a class="acessar-btn ender3v3se" href="https://printers.thalesgmartins.com.br/443" target="_blank"><i
+            class="fa-solid fa-right-to-bracket"></i>Acessar</a>
+        <a class="assistir-btn" href="https://printers.thalesgmartins.com.br/webcam/?action=snapshot" target="_blank"><i
+            class="fa-solid fa-eye"></i>Assistir</a>
       </div>
-    </main>
-    <footer>
-      <div class="footer-container">
-        <p>&copy; 2024 Ind3D. Todos os direitos reservados.</p>
+
+      <div class="card-impressora laranja">
+        <img src="laranja.png" alt="Laranja" width="100px" height="100px" />
+        <h2>Laranja</h2>
+        <a class="acessar-btn laranja" href="https://laranja.thalesgmartins.com.br/443" target="_blank"><i
+            class="fa-solid fa-right-to-bracket"></i>Acessar</a>
+        <a class="assistir-btn" href="https://laranja.thalesgmartins.com.br:443/webcam/stream" target="_blank"><i
+            class="fa-solid fa-eye"></i>Assistir</a>
       </div>
-    </footer>
-  </body>
+
+      <div class="card-impressora k1max">
+        <img src="k1max.png" alt="K1MAX" width="100px" height="100px" />
+        <h2>K1 MAX</h2>
+        <a class="acessar-btn k1max" href="404.html" target="_blank"><i
+            class="fa-solid fa-right-to-bracket"></i>Acessar</a>
+        <a class="assistir-btn" href="192.168.3.34:8080/?action=stream" target="_blank"><i
+            class="fa-solid fa-eye"></i>Assistir</a>
+      </div>
+
+      <div class="card-impressora ender3s1">
+        <img src="ender3s1.jpg" alt="Ender3S1" width="100px" height="100px" />
+        <h2>Ender 3 S1</h2>
+        <a class="acessar-btn ender3s1" href="404.html" target="_blank"><i
+            class="fa-solid fa-right-to-bracket"></i>Acessar</a>
+        <a class="assistir-btn" href="404.html" target="_blank"><i class="fa-solid fa-eye"></i>Assistir</a>
+      </div>
+
+      <div class="card-impressora azul">
+        <img src="azul.png" alt="Azul" width="100px" height="100px" />
+        <h2>Azul</h2>
+        <a class="acessar-btn azul" href="https://ind3d2.tecnicon.com.br" target="_blank"><i
+            class="fa-solid fa-right-to-bracket"></i>Acessar</a>
+        <a class="assistir-btn" href="https://ind3d2.tecnicon.com.br/webcam/?action=stream" target="_blank"><i
+            class="fa-solid fa-eye"></i>Assistir</a>
+      </div>
+
+    </div>
+  </main>
+  <footer>
+    <div class="footer-container">
+      <p>&copy; 2024 Ind3D. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+</body>
+
 </html>
